<resources>
    <string name="app_name">Clinical Site Support</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lessOne">&lt;1</string>
    <string name="oneToFour">1-4</string>
    <string name="fiveToNine">5-9</string>
    <string name="tenToFourteen">10-14</string>
    <string name="fifteenToNineteen">15-19</string>
    <string name="twentyPlus">20&#43;</string>
    <string name="twentyToTwentyFour">20-24</string>
    <string name="twentyFiveToTwentyNine">24-49</string>
    <string name="fiftyPlus">50&#43;</string>

    <string name="lessFifteen">&lt;1</string>
    <string name="fifteenPlus">15&#43;</string>

    <string name="fhs">FHS</string>
    <string name="opd">OPD</string>
    <string name="outreach">Outreach</string>
    <string name="maternity">Maternity</string>
    <string name="anc">PNC</string>
    <string name="inpatient">Inpatient</string>
    <string name="paediatric">Paediatric</string>
    <string name="pmtct">PMTCT</string>
    <string name="tb">TB</string>
    <string name="sti">STI</string>
    <string name="tb_unit">TB Unit</string>
    <string name="viac">VIAC Centre</string>
    <string name="vmmc">VMMC</string>

    <string name="dsd_indvidual_title">HTC_TST: DSD- Individuals</string>
    <string name="dsd_indvidual_question_one">1. Number of clients Mobilized for PITC</string>
    <string name="dsd_indvidual_question_two">2. Number of PITC clients receiving GHE talk and offered HIV testing</string>
    <string name="dsd_indvidual_question_three">3. Number Eligible for testing:</string>
    <string name="dsd_indvidual_question_four">5. Total individuals testested  for the first time and received their results</string>
    <string name="dsd_indvidual_question_five">6. First time Individuals Tested</string>
    <string name="dsd_indvidual_question_six">7.Total Positive First Time Individuals</string>
    <string name="dsd_indvidual_question_seven">8. Total Retested Individuals</string>
    <string name="dsd_indvidual_question_eight">9. Total Positive Retested Individuals</string>
    <string name="dsd_indvidual_question_nine">10. Number of newly identified Positives linked to care</string>

    <string name="dsd_couple_title">HTC_TST: DSD- Individuals</string>
    <string name="dsd_couple_question_one">1. Couples tested</string>
    <string name="dsd_couple_question_two">2. Couples Positive</string>
    <string name="dsd_couple_question_three">3. Discordant Couples:</string>

    <string name="txt_new_title">TX_NEW: DSD</string>
    <string name="txt_new_question_one">1. Total initiated on ART.</string>
    <string name="txt_new_question_two">2. Total declined ART</string>
    <string name="txt_new_question_three">3. Total CD4 Tested.</string>
    <string name="txt_new_question_four">4. Total viral load tested</string>

    <string name="register_title">Registers</string>
    <string name="month_report_form_title">Monthly Return Form</string>
    <string name="register_question_one">1. Number who received their results this month</string>
    <string name="register_question_two">2. Number of clients tested HIV positive this month</string>
    <string name="register_question_three">3. Number who received their results this month.</string>
    <string name="register_question_four">4. Number of clients tested HIV positive this month</string>
    <string name="register_question_five">7. Total initiated on ART</string>
    <string name="register_question_six">8. Total declined ART</string>
    <string name="register_question_seven">9. Total CD4 Tested</string>
    <string name="register_question_eight">10. Total viral load tested</string>

    <string name="pmtct_eid">5. PMTCT_EID</string>
    <string name="pmtct_stat">6 .PMTCT_STAT</string>

    <string name="tx_ret_question_one">Disaggregation Numerator </string>
    <string name="tx_ret_question_two">Disaggregation Denominator</string>

    <string name="disaggregation">Fine Disaggregation by Age Male and Female</string>

    <string name="entry_point">Disaggregated by Facility Delivery Point Number tested and number tested positive</string>

    <string name="tx_pvls_question_one">Routine Numerator Disaggregation</string>
    <string name="tx_pvls_question_two">Targeted Numerator Disaggregation</string>
    <string name="tx_pvls_question_three">Routine Denominator Disaggregation</string>
    <string name="tx_pvls_question_four">Target Denominator Disaggregation</string>

</resources>
