<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <TextView
            android:id="@+id/txt_name"
            style="@style/TextViewStyle"
            android:text="@string/dsd_couple_title"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="Description: Number of couples who received HIV Testing and counselling (HTC) services for HIV and received their results."
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Facility" />

                <Spinner
                    android:id="@+id/facility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Period" />

                <Spinner
                    android:id="@+id/period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Date Completed" />

                <EditText
                    android:id="@+id/dateCreated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Date Completed" />

            </TableRow>

            <Button
                android:id="@+id/btn_question_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="Question_1" />

            <Button
                android:id="@+id/btn_question_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="Question_2" />

            <Button
                android:id="@+id/btn_question_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="Question_3" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_span="2"
                    android:text="Disaggregated by Facility Delivery Point Number tested and number tested positive."
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text=""
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Tested"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Tested Positive"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fhs" />

                <EditText
                    android:id="@+id/testedFHS"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/positiveTestedFHS"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opd" />

                <EditText
                    android:id="@+id/testedOPD"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/positiveTestedOPD"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/outreach" />

                <EditText
                    android:id="@+id/testedOutreach"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/positiveTestedOutreach"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/maternity" />

                <EditText
                    android:id="@+id/testedMaternity"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/positiveTestedMaternity"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/anc" />

                <EditText
                    android:id="@+id/testedANC"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/positiveTestedANC"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </TableRow>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit" />

            <Button
                android:id="@+id/btn_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:drawablePadding="16dp"
                android:drawableTop="@mipmap/ic_check"
                android:text="Submitted"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </TableLayout>


    </LinearLayout>
</ScrollView>
