<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <Button
            android:id="@+id/btn_submit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selectable_item_background"
            android:text="Submit"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="Description: Percentage of HIV-positive new and relapsed registered TB cases on ART during TB treatment"
            android:textStyle="bold" />

        <TextView
            style="@style/TextViewInputStyle"
            android:text="Select Facility"></TextView>

        <Spinner
            android:id="@+id/facility"
            style="@style/SpinnerStyle" />

        <TextView
            style="@style/TextViewInputStyle"
            android:text="Select Period"></TextView>

        <Spinner
            android:id="@+id/period"
            style="@style/SpinnerStyle" />

        <TextView
            style="@style/TextViewInputStyle"
            android:text="Date Completed" />

        <EditText
            android:id="@+id/dateCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Date Completed" />

        <TextView
            style="@style/TextViewInputStyle"
            android:text="Name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_span="2"
                android:text="1. The number of registered TB cases with documented HIV-positive status who start or continue ART during the reporting period."
                android:textStyle="bold" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    style="@style/TextViewInputStyle"
                    android:text="Numerator" />

                <EditText
                    android:id="@+id/numerator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_span="2"
                android:text="2. The number of registered TB cases with documented HIV-positive status during the reporting period."
                android:textStyle="bold" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    style="@style/TextViewInputStyle"
                    android:text="Denominator" />

                <EditText
                    android:id="@+id/denominator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_span="2"
                android:text="3. Fine Disaggregation by Age Male and Female"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text=""
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Female"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Male"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lessOne" />

                <EditText
                    android:id="@+id/femaleLessThanOne"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="F"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/maleLessThanOne"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="M"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/oneToFour" />

                <EditText
                    android:id="@+id/femaleOneToFour"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="F"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/maleOneToFour"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="M"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fiveToNine" />

                <EditText
                    android:id="@+id/femaleFiveToNine"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="F"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/maleFiveToNine"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="M"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tenToFourteen" />

                <EditText
                    android:id="@+id/femaleTenToFourteen"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="F"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/maleTenToFourteen"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="M"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fifteenToNineteen" />

                <EditText
                    android:id="@+id/femaleFifteenToNineteen"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="F"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/maleFifteenToNineteen"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="M"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/twentyPlus" />

                <EditText
                    android:id="@+id/femaleTwentyPlus"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="F"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/maleTwentyPlus"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="M"
                    android:inputType="number" />

            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_span="2"
                    android:text="4. Disaggregated by Already/New on ART"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    style="@style/TextViewInputStyle"
                    android:text="Already On ART" />

                <EditText
                    android:id="@+id/alreadyOnART"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="Already On ART"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    style="@style/TextViewInputStyle"
                    android:text="New On ART" />

                <EditText
                    android:id="@+id/newOnART"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="New On ART"
                    android:inputType="number" />

            </TableRow>

            <Button
                android:id="@+id/btn_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selectable_item_background"
                android:text="Save"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal" />

            <Button
                android:id="@+id/btn_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:drawablePadding="16dp"
                android:drawableTop="@mipmap/ic_check"
                android:text="Submitted"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </TableLayout>

    </LinearLayout>
</ScrollView>
